test/errors/syntax-error.js
SyntaxError({
  name: "SyntaxError",
  message: "something went wrong",
  stack: "SyntaxError: something went wrong\n    at Object.<anonymous> (/Users/ayon/git/fron/test/errors/index.js:13:19)\n    at Module._compile (internal/modules/cjs/loader.js:776:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:787:10)\n    at Module.load (internal/modules/cjs/loader.js:643:32)\n    at Function.Module._load (internal/modules/cjs/loader.js:556:12)\n    at Module.require (internal/modules/cjs/loader.js:683:19)\n    at require (internal/modules/cjs/helpers.js:16:16)\n    at Object.<anonymous> (/Users/ayon/git/fron/test/get-types.js:13:5)\n    at Module._compile (internal/modules/cjs/loader.js:776:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:787:10)\n    at Module.load (internal/modules/cjs/loader.js:643:32)\n    at Function.Module._load (internal/modules/cjs/loader.js:556:12)\n    at Module.require (internal/modules/cjs/loader.js:683:19)\n    at require (internal/modules/cjs/helpers.js:16:16)\n    at /Users/ayon/git/fron/node_modules/mocha/lib/mocha.js:250:27\n    at Array.forEach (<anonymous>)\n    at Mocha.loadFiles (/Users/ayon/git/fron/node_modules/mocha/lib/mocha.js:247:14)\n    at Mocha.run (/Users/ayon/git/fron/node_modules/mocha/lib/mocha.js:576:10)\n    at Object.<anonymous> (/Users/ayon/git/fron/node_modules/mocha/bin/_mocha:637:18)\n    at Module._compile (internal/modules/cjs/loader.js:776:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:787:10)\n    at Module.load (internal/modules/cjs/loader.js:643:32)\n    at Function.Module._load (internal/modules/cjs/loader.js:556:12)\n    at Function.Module.runMain (internal/modules/cjs/loader.js:839:10)\n    at internal/main/run_main_module.js:17:11"
})